# super-duper-disser

./: .gitignore  .gitmodules  AGENTS.md  README.md  cities_small_compare.txt  main.ipynb  notebook.ipynb  notebook_osm_arctic_topology.ipynb  pyproject.toml  requirements.txt  run_all_cities.sh
aggregated_spatial_pipeline/: BACKLOG.md  README.md  README_PIPELINE2_JOINT_SERVICE_PT.md  README_PIPELINE2_JOINT_SERVICE_PT_NOTES.md  __init__.py  geodata_io.py  pandana_backend.py  pandana_bridge.py  runtime_config.py  runtime_paths.py  spec.py
aggregated_spatial_pipeline/blocksnet_data_pipeline/: __init__.py  pipeline.py  run.py  run_bundle_external.py  setup_blocksnet_dev_env.sh
aggregated_spatial_pipeline/config/: crosswalks.json  layers.json  phase1_city_batches.json  phase1_city_batches_balanced_150.json  policy.json  scenarios.json  transfer_rules.json
aggregated_spatial_pipeline/connectpt_data_pipeline/: __init__.py  pipeline.py  run.py  run_accessibility_recompute_external.py  run_bundle_external.py  run_route_generator_external.py
aggregated_spatial_pipeline/floor_predictor_pipeline/: __init__.py  setup_floor_predictor_env.sh
aggregated_spatial_pipeline/intermodal_graph_data_pipeline/: build_bundle_external.py  pipeline.py  run_bundle_external.py
aggregated_spatial_pipeline/pipeline/: __init__.py  crosswalks.py  io.py  run.py  run_floor_predictor_external.py  run_joint.py  run_phase1_batch.py  run_pipeline2_accessibility_first.py  run_pipeline2_prepare_solver_inputs.py  run_pipeline3_street_pattern_to_quarters.py  scenarios.py  transfers.py  (+5 more)
bridge/: README.md  __init__.py  adapters.py  graph_to_arctic.py  notebook_bridge.ipynb
pipeline/: __init__.py  config.py  run.py  run_base.py  run_base_osm.py  run_connectivity.py  run_pipeline2_solver_connectivity.py  run_plots.py  run_solver.py  run_solver_connectivity_cached.py
scripts/: audit_outputs_status.py  bootstrap_fresh_machine.sh  build_active19_service_gaps_readme.py  build_pipeline_storyboard.py  collect_target_15_cities.py  prepare_unique_cities_and_rebuild_floor.py  rerun_service_accessibility_late_stage.py  run_active19_experiments_live.zsh  run_active19_street_pattern_experiments_20260412.zsh  run_bergen_polyclinic_joint_scenario.sh  run_pattern_mode_corr_counties_10km.py  run_random_50_cities_pipeline.py
segregation-by-design-experiments/: .gitignore  NORTH_STAR.md  README.md  derive_reference_chunks_from_parent_grid.py  download_storyline_reference_chunks_roads.py  render_storyline_pkl_vs_grid_comparison.py  render_storyline_reference_chunks_atlas.py  render_storyline_reference_roads_atlas.py  render_storyline_street_pattern_atlas.py  run_storyline_reference_chunks_classification.py  run_storyline_street_pattern.sh  run_storyline_street_pattern_uniform_b5000_g500.sh  run_street_pattern_canada_centres.py  run_street_pattern_city.py  run_street_pattern_us_centres.py  storyline_reference_chunks_12.tsv  storyline_reference_chunks_12_b700.tsv  storyline_reference_chunks_nonempty_from_pkl.tsv  storyline_street_pattern_places.tsv  storyline_street_pattern_places_reference_12.tsv
(+17 files in other folders)
