[project]
name = "super-duper-disser"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "access==1.1.9",
    "affine==2.4.0",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "branca==0.8.1",
    "cdsapi==0.7.5",
    "certifi==2025.1.31",
    "cftime==1.6.4.post1",
    "charset-normalizer==3.4.1",
    "click==8.2.0",
    "click-plugins==1.1.1",
    "cligj==0.7.2",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "datapi==0.4.0",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "deprecation==2.1.0",
    "esda==2.7.0",
    "executing==2.2.0",
    "fiona==1.10.1",
    "folium==0.19.5",
    "fonttools==4.56.0",
    "geopandas==1.0.1",
    "giddy==2.3.6",
    "h5netcdf==1.6.1",
    "h5py==3.13.0",
    "idna==3.10",
    "igraph==0.11.8",
    "inequality==1.1.1",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jenkspy==0.4.1",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "joypy==0.2.6",
    "jupyter>=1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab>=4.5.5",
    "kiwisolver==1.4.8",
    "libpysal==4.13.0",
    "llvmlite==0.44.0",
    "mapclassify==2.8.1",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "meteostat==1.6.8",
    "mgwr==2.2.1",
    "momepy==0.10.0",
    "mpmath==1.3.0",
    "multiurl==0.3.5",
    "nc-time-axis==1.4.1",
    "nest-asyncio==1.6.0",
    "netcdf4==1.7.2",
    "networkx==3.4.2",
    "numba==0.61.2",
    "numpy==2.2.3",
    "osmnx==2.0.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "plotly>=6.6.0",
    "pointpats==2.5.1",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pulp==3.1.1",
    "pure-eval==0.2.3",
    "pyarrow>=23.0.1",
    "pygments==2.19.1",
    "pyogrio==0.10.0",
    "pyparsing==3.2.1",
    "pyproj==3.7.1",
    "pysal==25.1",
    "python-dateutil==2.9.0.post0",
    "python-louvain==0.16",
    "pytz==2025.1",
    "pyzmq==26.3.0",
    "quantecon==0.8.0",
    "rasterio==1.4.3",
    "rasterstats==0.20.0",
    "requests==2.32.3",
    "rtree==1.4.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "segregation==2.5.2",
    "shapely==2.0.7",
    "simplejson==3.20.1",
    "six==1.17.0",
    "soupsieve==2.7",
    "spaghetti==1.7.6",
    "spglm==1.1.0",
    "spint==1.0.7",
    "splot==1.1.7",
    "spopt==0.6.1",
    "spreg==1.8.2",
    "stack-data==0.6.3",
    "statsmodels==0.14.4",
    "sympy==1.14.0",
    "texttable==1.7.0",
    "threadpoolctl==3.6.0",
    "tobler==0.12.1",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transliterate>=1.10.2",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "xarray==2025.4.0",
    "xyzservices==2025.1.0",
]
